--- a/CNView_wrapper.Rmd
+++ b/CNView_wrapper.Rmd
@@ -3,24 +3,15 @@
 ##Install the PDFTOOLS package only once for combining multiple pdfs, then comment it out using "#"
 #install.packages('pdftools', dependencies = TRUE)
 ```{r}
-
 ##Loads required packages; installs if necessary##
-  if("RMySQL" %in% rownames(installed.packages()) == FALSE)
-  {warning("RMySQL package not installed.  Attempting to install from CRAN...")
-    install.packages("RMySQL",repos="http://cran.rstudio.com/")}
-  suppressPackageStartupMessages(library(RMySQL))
-  if("plyr" %in% rownames(installed.packages()) == FALSE)
-  {warning("plyr package not installed.  Attempting to install from CRAN...")
-    install.packages("plyr",repos="http://cran.rstudio.com/")}
-  suppressPackageStartupMessages(library(plyr))
-  if("MASS" %in% rownames(installed.packages()) == FALSE)
-  {warning("MASS package not installed.  Attempting to install from CRAN...")
-    install.packages("MASS",repos="http://cran.rstudio.com")}
-  suppressPackageStartupMessages(library(MASS))
-  if("metap" %in% rownames(installed.packages()) == FALSE)
-  {warning("metap package not installed.  Attempting to install from CRAN...")
-    install.packages("metap",repos="http://cran.rstudio.com/")}
-  library(metap)
+cran.package.list <- c("readxl","pdftools","RMySQL", "data.table",
+                       "plyr","MASS","metap")
+for(i in cran.package.list){
+   if(!(i %in% rownames(installed.packages()))){
+     message('Installing package: ',i)
+     install.packages(i,dependencies = T)
+   } else next
+}
 
 library(pdftools)
 library(readxl)
@@ -56,6 +47,10 @@ cat('..loaded.')
 ##  SET output directory
 #dir = '/home/jhshin/work/workspace/UO1/CNView/richard/'
 dir = 'out/'
+#odir <- file.path(getwd(), dir)
+if (!dir.exists(dir)){
+ dir.create(dir)
+}
 ```
 
 ```{r}
